Add styling to body

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,9 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+    background-position: center;    
+}
+
+
 img {
     width: 30%;
     float: left;
