--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,13 @@
 body {
     font-family: 'Open Sans', sans-serif;
     background-position: center;    
+    text-align: center;
 }
 
+h1 {
+    font-size: 5em;
+    font-weight: 700;    
+}
 
 img {
     width: 30%;
