--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,8 @@ body {
 
 h1 {
     font-size: 5em;
-    font-weight: 700;    
+    font-weight: 700;  
+    margin: 10px 0px 10px 0px;  
 }
 
 img {
