--- a/styles/main.css
+++ b/styles/main.css
@@ -7,8 +7,8 @@ body {
 h1 {
     font-size: 5em;
     font-weight: 700;  
-    margin: 10px 0px 10px 0px;  
-}
+    color: rgb(1, 28, 71)
+    }
 
 img {
     width: 30%;
