--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,47 @@
 body {
+    background: url(http://source.unsplash.com/Kwi60PbAM9I);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 500px;
     font-family: 'Open Sans', sans-serif;
-    background-position: center;    
-    text-align: center;
+    color: white;
+}
+
+.container {
+    margin: 0px 100px 0px 100px;
 }
 
 h1 {
+    text-align: center;
     font-size: 5em;
-    font-weight: 700;  
-    color: rgb(1, 28, 71)
-    }
+    font-weight: 800;  
+    margin: 10px 0px 10px 0px;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:visited {
+    color: white;
+}
+
+ul {
+    text-align: center;
+    font-size: 3em;
+    font-weight: 700;
+    list-style: none;
+}
+
+li {
+    background: rgba(0, 0, 0, 0.4);
+}
+
+footer {
+    text-align: center;
+}
 
 img {
-    width: 30%;
-    float: left;
-    margin: 1.66%;
+
 }
